[NONE] Prevent DynamicAnchor from swallowing exceptions.
 - When parameters are initialized only certain exceptions need to be handled
   by DynamicAnchor. The rest falls through to user code.